--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -8,7 +8,7 @@
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
-                    <a class="btn btn-primary pull-right" href="/alumnos/new"><i  class="fa fa-plus-square"></i> NUEVO ALUMNO</a>
+                    <a class="btn btn-primary pull-right" href="/alumnos/new""><i  class="fa fa-plus-square"></i> NUEVO ALUMNO</a>
 
                 </div>
             </div>
@@ -53,14 +53,14 @@
                                     <td>{{ alumno.apellido }}</td>
                                     <td>{{ alumno.direccion }}</td>
                                     <td>{{ alumno.telefono }}</td>
-                                    <td>{{ alumno.fecha_nacimiento }}</td>
+
                                     <td>{% if alumno.ficha %}
-                                    <td>{% if alumno.estado %}
                                         <img height="100px" src="/media/{{ alumno.imagen }}">{% else %}sin
                                         foto{% endif %}</td>
                                     <td>{% if alumno.ficha %}<a href="/media/{{ alumno.ficha }}">ficha</a>{% else %}(sin
                                         ficha){% endif %}</td>
-                                    <td><a class="btn btn-info btn-xs" href="/alumnos/{{ alumno.id }}">Editar </a>
+                                     <td>{{ alumno.estado }}</td>
+                                    <td><a class="btn btn-info btn-xs" href="/alumnos/{{ alumno.id }}/update">Editar </a>
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
                                            data-target="#eliminar-modal" onclick="formEliminar({{ alumno.id }})">Eliminar</a></td>
                                 </tr>
@@ -105,7 +105,7 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/alumnos/delete/' + id);
+            $('#eliminar-form').attr('action', '/alumnos/' + id + '/delete' );
         }
     </script>
 {% endblock %}
