--- a/src/main/templates/main/titulares.html
+++ b/src/main/templates/main/titulares.html
@@ -8,7 +8,7 @@
     <div class="title_right">
         <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
-            <a class="btn btn-primary pull-right" href="/titulares/new"><i class="fa fa-plus-square"></i> NUEVO
+            <a class="btn btn-primary pull-right" href="/main/titulares/new"><i class="fa fa-plus-square"></i> NUEVO
                 TITULAR</a>
 
         </div>
