--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -18,95 +18,98 @@
                 <li><a><img src="/static/img/cursos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Cursos
                     <span class="fa fa-chevron-down"></span></a>
                      <ul class="nav child_menu">
-                        <li><a href="/escuela/clases">Listar Clases</a></li>
-                        <li><a href="/escuela/clases/new">Crear Nueva Clase</a></li>
-                         <li><a href="/escuela/grupos">Listar Grupos</a></li>
-                         <li><a href="/escuela/grupos/new">Crear Nuevo Grupo</a></li>
-                         <li><a href="/escuela/horario">Listar Horarios</a></li>
-                         <li><a href="/escuela/horario/new">Crear Horarios</a></li>
-                         <li><a href="/escuela/etiqueta/new">Crear Etiquetas</a></li>
+                        <li><a href="/escuela/clases">Mantenimiento de Clases</a></li>
+                        <li><a href="/escuela/clases/new">Nueva Clase</a></li>
+                         <li><a href="/escuela/grupos">Mantenimiento de Grupos</a></li>
+                         <li><a href="/escuela/grupos/new">Nuevo Grupo</a></li>
+                         <li><a href="/escuela/horario">Mantenimiento de Horarios</a></li>
+                         <li><a href="/escuela/horario/new">Nuevo Horario</a></li>
+
+
+                         <li><a href="/escuela/etiqueta/new">Etiquetas</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/alumnos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Alumnos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/alumnos">Listar Alumnos</a></li>
-                        <li><a href="/alumnos/new">Crear Nuevo Alumno</a></li>
-                        <li><a href="/titulares/new">Crear Titular</a></li>
+                        <li><a href="/escuela/inscripciones/new">Nueva Inscripción</a></li>
+                        <li><a href="/alumnos">Mantenimiento de Alumnos</a></li>
+                        <li><a href="/alumnos/new">Nuevo Alumno</a></li>
+                        <li><a href="/titulares">Mantenimiento de Titulares</a></li>
+                        <li><a href="/escuela/inscripciones">Inscripciones</a></li>
+
 
                     </ul>
                 </li>
                 <li><a><img src="/static/img/profesores_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
-                    Profesores <span class="fa fa-chevron-down"></span></a>
+                    Staff <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/profesores">Listar Profesores</a></li>
-                        <li><a href="/profesores/new">Crear Nuevo Profesor</a></li>
+                        <li><a href="/profesores">Mantenimiento de Profesores</a></li>
+                        <li><a href="/profesores/new">Nuevo Profesor</a></li>
+                        <li><a href="/empleados/">Mantenimiento del Personales</a></li>
+                        <li><a href="/empleados/">Nuevo Personal</a></li>
+
 
                     </ul>
                 </li>
                 <li><a><img src="/static/img/pagos_blanco.png" width="28px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Pagos
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="general_elements.html">General Elements</a></li>
-                        <li><a href="media_gallery.html">Media Gallery</a></li>
-                        <li><a href="typography.html">Typography</a></li>
-                        <li><a href="icons.html">Icons</a></li>
-                        <li><a href="glyphicons.html">Glyphicons</a></li>
-                        <li><a href="widgets.html">Widgets</a></li>
-                        <li><a href="invoice.html">Invoice</a></li>
-                        <li><a href="inbox.html">Inbox</a></li>
-                        <li><a href="calendar.html">Calendar</a></li>
+                        <li><a href="/">Nuevo Pago</a></li>
+                       <li><a href="/">Cuentas a Cobrar</a></li>
+                        <li><a href="/">Cuentas a Pagar</a></li>
+
                     </ul>
                 </li>
                 <li><a><img src="/static/img/asistencia_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Asistencia <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/escuela/asistencia">Consultar Asistencia</a></li>
-                        <li><a href="/escuela/asistencia/new">Ingresar Asistencia</a></li>
+                        <li><a href="/escuela/asistencia/new">Registrar Asistencia</a></li>
                     </ul>
                 </li>
 
                 <li><a><img src="/static/img/indumentaria_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="chartjs.html">Chart JS</a></li>
-                        <li><a href="chartjs2.html">Chart JS2</a></li>
-                        <li><a href="morisjs.html">Moris JS</a></li>
-                        <li><a href="echarts.html">ECharts</a></li>
-                        <li><a href="other_charts.html">Other Charts</a></li>
+                        <li><a href="/">Nueva Venta</a></li>
+                        <li><a href="/">Mantenimiento de Ventas</a></li>
+                        <li><a href="/">Mantenimiento de Facturas</a></li>
+                        <li><a href="/">Mantenimiento de Clientes</a></li>
+
+
+
+
                     </ul>
                 </li>
                 <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
-                    Inventario <span class="fa fa-chevron-down"></span></a>
+                    Compras <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="chartjs.html">Chart JS</a></li>
-                        <li><a href="chartjs2.html">Chart JS2</a></li>
-                        <li><a href="morisjs.html">Moris JS</a></li>
-                        <li><a href="echarts.html">ECharts</a></li>
-                        <li><a href="other_charts.html">Other Charts</a></li>
+                        <li><a href="/">Nueva Compra</a></li>
+                        <li><a href="/">Consulta de compras</a></li>
+                        <li><a href="/">Categorias de productos</a></li>
+                        <li><a href="/">Mantenimiento de Productos</a></li>
+                        <li><a href="/">Existencia de productos</a></li>
+
                     </ul>
                 </li>
 
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Reportes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="chartjs.html">Chart JS</a></li>
-                        <li><a href="chartjs2.html">Chart JS2</a></li>
-                        <li><a href="morisjs.html">Moris JS</a></li>
-                        <li><a href="echarts.html">ECharts</a></li>
-                        <li><a href="other_charts.html">Other Charts</a></li>
+                        <li><a href="/">Cuotas a vencer</a></li>
+                        <li><a href="/">Asistencias</a></li>
+                        <li><a href="/">etc</a></li>
                     </ul>
                 </li>
 
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ajustes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="form.html">General Form</a></li>
-                        <li><a href="form_advanced.html">Advanced Components</a></li>
-                        <li><a href="form_validation.html">Form Validation</a></li>
-                        <li><a href="form_wizards.html">Form Wizard</a></li>
-                        <li><a href="form_upload.html">Form Upload</a></li>
-                        <li><a href="form_buttons.html">Form Buttons</a></li>
+                        <li><a href="/tienda/documento/new">Usuarios</a></li>
+                        <li><a href="form_advanced.html">Roles</a></li>
+                        <li><a href="form_validation.html">Permisos</a></li>
+
                     </ul>
                 </li>
             </ul>
