Agrega administracion de usuarios,roles y error 403

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -76,10 +76,6 @@
                         <li><a href="/">Mantenimiento de Ventas</a></li>
                         <li><a href="/">Mantenimiento de Facturas</a></li>
                         <li><a href="/">Mantenimiento de Clientes</a></li>
-
-
-
-
                     </ul>
                 </li>
                 <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
@@ -106,9 +102,8 @@
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ajustes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/documento/new">Usuarios</a></li>
-                        <li><a href="form_advanced.html">Roles</a></li>
-                        <li><a href="form_validation.html">Permisos</a></li>
+                        <li><a href="/admin/auth/user/">Usuarios</a></li>
+                        <li><a href="/admin/auth/group/">Roles</a></li>
 
                     </ul>
                 </li>
