--- a/src/main/templates/main/profesores.html
+++ b/src/main/templates/main/profesores.html
@@ -112,7 +112,7 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/profesores/delete/' + id);
+            $('#eliminar-form').attr('action', '/profesores/' + id + '/delete);
         }
     </script>
 {% endblock %}
