--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -46,8 +46,8 @@
                     <ul class="nav child_menu">
                         <li><a href="/profesores">Mantenimiento de Profesores</a></li>
                         <li><a href="/profesores/new">Nuevo Profesor</a></li>
-                        <li><a href="/empleados/">Mantenimiento del Personales</a></li>
-                        <li><a href="/empleados/">Nuevo Personal</a></li>
+                        <li><a href="/empleados">Mantenimiento del Personales</a></li>
+                        <li><a href="/empleados/new">Nuevo Personal</a></li>
 
 
                     </ul>
