--- a/src/main/templates/main/personas.html
+++ b/src/main/templates/main/personas.html
@@ -62,7 +62,7 @@
                                 else %}(sin
                                 fotocopia){% endif %}
                             </td>
-                            <td><a class="btn btn-info btn-xs" href="/personas/{{ persona.id }}">Editar </a>
+                            <td><a class="btn btn-info btn-xs" href="/personas/{{ persona.id }}/update">Editar </a>
                                 <a button class="btn btn-danger btn-xs" data-toggle="modal"
                                    data-target="#eliminar-modal" onclick="formEliminar({{ persona.id }})">Eliminar</a>
                             </td>
