--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -83,9 +83,10 @@
                     <ul class="nav child_menu">
                         <li><a href="/">Nueva Compra</a></li>
                         <li><a href="/">Consulta de compras</a></li>
-                        <li><a href="/">Categorias de productos</a></li>
-                        <li><a href="/">Mantenimiento de Productos</a></li>
-                        <li><a href="/">Existencia de productos</a></li>
+                        <li><a href="tienda/categoria_productos">Mantenimiento de Categoria</a></li>
+                        <li><a href="tienda/categoria_productos/new">Categorias de productos</a></li>
+                        <li><a href="/tienda/productos">Mantenimiento de Productos</a></li>
+                        <li><a href="/tienda/productos/new">Existencia de productos</a></li>
 
                     </ul>
                 </li>
