--- a/src/escuela/templates/grupos-form.html
+++ b/src/escuela/templates/grupos-form.html
@@ -18,7 +18,7 @@
                         <div class="ln_solid"></div>
                         <div class="form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                <a class="btn btn-primary" type="button" href="/grupos">Cancelar</a>
+                                <a class="btn btn-primary" type="button" href="/escuela/grupos">Cancelar</a>
                                 <button class="btn btn-primary" type="reset">Limpiar</button>
                                 <input type="submit" class="btn btn-success" value="Guardar" />
                             </div>
