--- a/src/tienda/templates/producto.html
+++ b/src/tienda/templates/producto.html
@@ -1,14 +1,14 @@
-{% extends "base.html" %}
+% extends "base.html" %}
 {% block content %}
 
     <div class="page-title">
         <div class="title_left">
-            <h3>Lista de Asistencia</h3>
+            <h3>Nuevo Producto</h3>
         </div>
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
-                    <a class="btn btn-primary pull-right" href="escuela/asistencia/new"><i  class="fa fa-plus-square"></i> NUEVA ASISTENCIA</a>
+                    <a class="btn btn-primary pull-right" href="/tienda/productos/new"><i  class="fa fa-plus-square"></i> NUEVO PRODUCTO </a>
 
 
                 </div>
@@ -32,22 +32,31 @@
 
                             <thead>
                             <tr>
-                                <th>id_alumno</th>
-                                <th>id_grupo</th>
-                                <th>fecha</th>
-                                <th>Acción</th>
+                                <th>Id_Producto</th>
+                                <th>Categoria_Id</th>
+                                <th>Nombre</th>
+                                <th>Descripion</th>
+                                <th>Precio</th>
+                                <th>Descuento</th>
+                                <th>IVA</th>
+                                <th>Estado</th>
                             </tr>
                             </thead>
                             <tbody>
 
-                            {% for asistencia in asistencias %}
+                            {% for producto in tienda %}
                                 <tr>
-                                    <td>{{ asistencia.id_alumno }}</td>
-                                    <td>{{ asistencia.id_grupo }}</td>
-                                    <td>{{ asistencia.fecha }}</td>
-                                    <td><a class="btn btn-info btn-xs" href="/escuela/asistencia/{{ asistencia.id }}/update">Editar </a>
+                                    <td>{{ producto.id }}</td>
+                                    <td>{{ producto.categoria_id }}</td>
+                                    <td>{{ producto.nombre }}</td>
+                                    <td>{{ producto.descripcion }}</td>
+                                    <td>{{ producto.precio }}</td>
+                                    <td>{{ producto.descuento }}</td>
+                                    <td>{{ producto.iva }}</td>
+                                    <td>{{ producto.estado }}</td>
+                                    <td><a class="btn btn-info btn-xs" href="/tienda/productos{{ producto.id }}/update">Editar </a>
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
-                                           data-target="#eliminar-modal" onclick="formEliminar({{ asistencia.id}})">Eliminar</a></td>
+                                           data-target="#eliminar-modal" onclick="formEliminar({{ producto.id}})">Eliminar</a></td>
                                 </tr>
                             {% endfor %}
 
@@ -73,7 +82,7 @@
                     <h4 class="modal-title" id="myModalLabel2">Confirmación</h4>
                 </div>
                 <div class="modal-body">
-                    <h4>Esta seguro que desea eliminar esta Asistencia?</h4>
+                    <h4>Esta seguro que desea eliminar este Producto?</h4>
 
                 </div>
                 <div class="modal-footer">
@@ -90,7 +99,8 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/escuela/asistencia/' + id_alumno + '/delete);
+            $('#eliminar-form').attr('action', '/tienda/producto' + id + '/delete);
         }
     </script>
 {% endblock %}>
+
