Agrega crud factura , mejora etiqueta(colorpicker)

--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -37,6 +37,8 @@
                 <link href="/static/vendors/jQuery-Smart-Wizard/styles/smart_wizard.css" rel="stylesheet">
                 <link href="/static/vendors/select2/dist/css/select2.css" rel="stylesheet">
                 <link href="/static/autocomplete_light/select2.css" rel="stylesheet">
+                <link href="/static/vendors/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" rel="stylesheet">
+                <link rel="shortcut icon" type="image/png" href="/static/img/logo_negro.png">
             {% endblock stylesheets %}
 
             <!-- Custom Theme Style -->
@@ -127,6 +129,7 @@
                 <script src="/static/autocomplete_light/jquery.init.js"></script>
                 <script src="/static/autocomplete_light/autocomplete.init.js"></script>
                 <script src="/static/vendors/autocomplete_light/select2.init.js"></script>
+                <script src="/static/vendors/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
             {% endblock %}
             <!-- Custom Theme Scripts -->
             <script src="/static/build/js/custom.js"></script>
