--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -55,9 +55,9 @@
                 <li><a><img src="/static/img/pagos_blanco.png" width="28px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Pagos
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/">Nuevo Pago</a></li>
-                       <li><a href="/">Cuentas a Cobrar</a></li>
-                        <li><a href="/">Cuentas a Pagar</a></li>
+                        <li><a href="#">Nuevo Pago</a></li>
+                       <li><a href="#">Cuentas a Cobrar</a></li>
+                        <li><a href="#">Cuentas a Pagar</a></li>
 
                     </ul>
                 </li>
@@ -72,19 +72,19 @@
                 <li><a><img src="/static/img/indumentaria_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/">Nueva Venta</a></li>
-                        <li><a href="/">Mantenimiento de Ventas</a></li>
-                        <li><a href="/">Mantenimiento de Facturas</a></li>
-                        <li><a href="/">Mantenimiento de Clientes</a></li>
+                        <li><a href="#">Nueva Venta</a></li>
+                        <li><a href="#">Mantenimiento de Ventas</a></li>
+                        <li><a href="/tienda/facturas">Mantenimiento de Facturas</a></li>
+{#                        <li><a href="">Mantenimiento de Clientes</a></li>#}
                     </ul>
                 </li>
                 <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Compras <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/">Nueva Compra</a></li>
-                        <li><a href="/">Consulta de compras</a></li>
-                        <li><a href="tienda/categoria_productos">Mantenimiento de Categoria</a></li>
-                        <li><a href="tienda/categoria_productos/new">Categorias de productos</a></li>
+                        <li><a href="#">Nueva Compra</a></li>
+                        <li><a href="#">Consulta de compras</a></li>
+                        <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>
+                        <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>
                         <li><a href="/tienda/productos">Mantenimiento de Productos</a></li>
                         <li><a href="/tienda/productos/new">Existencia de productos</a></li>
 
@@ -94,9 +94,9 @@
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Reportes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/">Cuotas a vencer</a></li>
-                        <li><a href="/">Asistencias</a></li>
-                        <li><a href="/">etc</a></li>
+                        <li><a href="#">Cuotas a vencer</a></li>
+{#                        <li><a href="">Asistencias</a></li>#}
+{#                        <li><a href="#">etc</a></li>#}
                     </ul>
                 </li>
 
