--- a/src/tienda/templates/facturas.html
+++ b/src/tienda/templates/facturas.html
@@ -3,12 +3,12 @@
 
     <div class="page-title">
         <div class="title_left">
-            <h3>Lista de Asistencia</h3>
+            <h3>Lista de Facturas</h3>
         </div>
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
-                    <a class="btn btn-primary pull-right" href="/escuela/asistencia/new"><i  class="fa fa-plus-square"></i> NUEVA ASISTENCIA</a>
+                    <a class="btn btn-primary pull-right" href="/tienda/facturas/new"><i  class="fa fa-plus-square"></i> NUEVA FACTURA</a>
 
                 </div>
             </div>
@@ -30,23 +30,43 @@
                                width="100%">
 
                             <thead>
+
                             <tr>
-                                <th>id_alumno</th>
-                                <th>id_grupo</th>
-                                <th>fecha</th>
+                                <th>Nombre</th>
+                                <th>RUC</th>
+                                <th>Actividad_economica</th>
+                                <th>Dirección</th>
+                                <th>Teléfono</th>
+                                <th>Numero timbrado</th>
+                                <th>punto_emision</th>
+                                <th>nro_inicial</th>
+                                <th>nro_final</th>
+                                <th>vigencia_desde</th>
+                                <th>vigencia_hasta</th>
+                                <th>estado</th>
                                 <th>Acción</th>
                             </tr>
                             </thead>
                             <tbody>
 
-                            {% for asistencia in asistencias %}
+                            {% for factura in facturas %}
                                 <tr>
-                                    <td>{{ asistencia.id_alumno }}</td>
-                                    <td>{{ asistencia.id_grupo }}</td>
-                                    <td>{{ asistencia.fecha }}</td>
-                                    <td><a class="btn btn-info btn-xs" href="/escuela/asistencia/{{ asistencia.id }}/update">Editar </a>
+                                    <td>{{ factura.nombre }}</td>
+                                    <td>{{ factura.ruc }}</td>
+                                    <td>{{ factura.actividad_economica }}</td>
+                                    <td>{{ factura.direccion }}</td>
+                                    <td>{{ factura.telefono }}</td>
+                                    <td>{{ factura.numero_timbrado }}</td>
+                                    <td>{{ factura.punto_emision }}</td>
+                                    <td>{{ factura.nro_inicial }}</td>
+                                    <td>{{ factura.vigencia_desde }}</td>
+                                    <td>{{ factura.vigencia_hasta }}</td>
+                                    <td>{{ factura.estado }}</td>
+
+
+                                    <td><a class="btn btn-info btn-xs" href="/tienda/facturas/{{ factura.id }}/update">Editar </a>
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
-                                           data-target="#eliminar-modal" onclick="formEliminar({{ asistencia.id}})">Eliminar</a></td>
+                                           data-target="#eliminar-modal" onclick="formEliminar({{ factura.id }})">Eliminar</a></td>
                                 </tr>
                             {% endfor %}
 
@@ -72,7 +92,7 @@
                     <h4 class="modal-title" id="myModalLabel2">Confirmación</h4>
                 </div>
                 <div class="modal-body">
-                    <h4>Esta seguro que desea eliminar esta Asistencia?</h4>
+                    <h4>Esta seguro que desea eliminar esta Factura?</h4>
 
                 </div>
                 <div class="modal-footer">
@@ -89,7 +109,7 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/escuela/asistencia/' + id_alumno + '/delete);
+            $('#eliminar-form').attr('action', '/tienda/facturas/' + id + '/delete' );
         }
     </script>
-{% endblock %}>
+{% endblock %}
