--- a/src/tienda/templates/categoria_producto.html
+++ b/src/tienda/templates/categoria_producto.html
@@ -38,7 +38,7 @@
                             </thead>
                             <tbody>
 
-                            {% for categoriaproducto in tienda %}
+                            {% for categoriaproducto in categoria_producto %}
                                 <tr>
                                     <td>{{ categoriaproducto.nombre }}</td>
                                     <td>{{ categoriaproducto.descripcion }}</td>
