Mejoras en inscripcion/clases/grupos

--- a/src/main/templates/forms/form.html
+++ b/src/main/templates/forms/form.html
@@ -18,6 +18,8 @@
             {{ field }}
         {% elif field|field_type == 'ChoiceField' %}
             {{ field }}
+        {% elif field|field_type == 'MultipleChoiceField' %}
+            {{ field }}
         {% elif field|field_type == 'RadioSelect' %}
             {{ field }}
         {% else %}
