--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -77,6 +77,8 @@
                             <div id="step-3" class="content" style="display: none;">
 
                             </div>
+
+                            </div>
                             <div id="step-4" class="content" style="display: none;">
 
                             </div>
